--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 </head>
 
 <body>
-    <div id="selectme">Lorem ipsum dolor sit amet consectetur</div>
+    <div class="one two three four " id="selectme">Lorem ipsum dolor sit amet consectetur</div>
     <div>I am a div</div>
-    <h2 class="heading">Heading 2</h2>
-    <h3 class="heading">Heading 3</h3>
-    <h4 class="heading">Heading4</h4>
-    <span> This is a span </span>
 </body>
 
 </html>
